-issue#1553: Poller does not set rrd_step_counter correctly if no steps taken
-issue#1559: CLI Output Issues due to over escaping
-issue#1560: Warning that escapeshellarg() is escaping a null
-issue#1567: Technical support - add notification if Cacti and Spine version is different
-issue#1574: User templates are not correctly being applied
-issue#1590: User Admin generates SQL error if user is not part of any groups
-issue#1601: Aggregate Graphs can not include some classes of COMMENT
-issue#1602: PHP ERROR: Call to undefined function api_data_source_cache_crc_update()
-issue#1606: Boost debug log not functional
-issue#1607: Boost next run time occurs in the past
-issue#1608: Possible boost race conditions
-issue#1609: Remote pollers update 'stats_poller' on main poller
-issue#1617: Editing a data query results in missing $header variable
-issue#1621: Realtime Popup can cause automatic logout
-issue#1626: httpd-error.log have message about Fontconfig
-issue#1634: Default snmp quick print setting resulting in false poller ASSERTS on some php releases
-issue#1655: Correct Cacti to handle new MySQL 8.0 reserved word `system`
-issue#1658: Devices drop down should be filtered by Site
-issue#1660: Reports based upon Tree don't maintain graph order
-issue#1674: Threads and Processes values not migrated to Poller table during upgrade
-issue#1676: Allow automation discovery to add the same sysname on different hosts
-issue#1700: Mail sent without auth causes errors to appear in logs
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-feature#122: Support a Site Branch Type
-feature#289: Allow external nologin access for Realtime Graphs
-feature#973: Obtain users email and full name from ldap 
-feature#1347: Update automation logging to work better