@@ -28,6 +28,7 @@ Cacti CHANGELOG
 -issue#1560: Warning that escapeshellarg() is escaping a null
 -issue#1567: Technical support - add notification if Cacti and Spine version is different
 -issue#1574: User templates are not correctly being applied
+-issue#1589: Installer now checks that the temporary folder is writable
 -issue#1590: User Admin generates SQL error if user is not part of any groups
 -issue#1601: Aggregate Graphs can not include some classes of COMMENT
 -issue#1602: PHP ERROR: Call to undefined function api_data_source_cache_crc_update()
@@ -44,6 +45,7 @@ Cacti CHANGELOG
 -issue#1660: Reports based upon Tree don't maintain graph order
 -issue#1674: Threads and Processes values not migrated to Poller table during upgrade
 -issue#1676: Allow automation discovery to add the same sysname on different hosts
+-issue#1690: Report a warning if the default collation is not utf8mb4_unicode_ci
 -issue#1700: Mail sent without auth causes errors to appear in logs
 -issue: Move Graph removal function to Graph API
 -issue: Fix issue with display_custom_error_message() causing problem with system error message handling
